--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,10 +17,8 @@
       {% endif %}
       {% if site.show_downloads %}
         <a href="https://discord.gg/VK2V7Yk" class="btn"><b>Discord</b></a>
-        <a href="https://github.com/scripthubteam/scripthubteam.github.io/pulls" class="btn">Solicitar algo</a>
-        <a href="https://github.com/scripthubteam/scripthubteam.github.io/issues" class="btn">Reportar un error</a>
       {% endif %}
-      <a href="/docs" class="btn"><b>Documentación</b></a>
+      <a href="/docs" class="btn">Documentación</a>
     </section>
 
     <section class="main-content">
@@ -30,7 +28,8 @@
         {% if site.github.is_project_page %}
           <span class="site-footer-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a> es mantenido por <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</span>
         {% endif %}
-        <span class="site-footer-credits">Impulsado por <a href="https://pages.github.com">GitHub Pages</a>.</span>
+        <span class="site-footer-credits">Impulsado por <a href="https://pages.github.com">GitHub Pages</a>. <a href="https://github.com/scripthubteam/scripthubteam.github.io/pulls">Solicitar algo</a> ー
+        <a href="https://github.com/scripthubteam/scripthubteam.github.io/issues">Reportar un error</a></span>
       </footer>
     </section>
 
